Fix a bunch of little bugs about the UI/UX of the messaging
- When messages dropdown is visible in the header clicking anywhere else always closes it
- Fix width of messages list on left sidebar when it gets too small
- Make sure message box on bottom is visible on the screen
- Fix error when pressing arrow key before typing anything in the search box to find people to message
- Fix bug when pressing enter when no person is selected in the people to message list on the right

--- a/src/routes/PrimaryLayout/components/TopNav/TopNavDropdown/TopNavDropdown.scss
+++ b/src/routes/PrimaryLayout/components/TopNav/TopNavDropdown/TopNavDropdown.scss
@@ -8,6 +8,7 @@ $dropdown-width: 375px;
   bottom: 0px;
   left: 0px;
   background-color: transparent;
+  z-index: 51;
 }
 
 .wrapper {
@@ -22,6 +23,7 @@ $dropdown-width: 375px;
   box-shadow: 11px 12px 26px 0px rgba(#dcdcdc, 0.6);
   &.active {
     display: block;
+    z-index: 52;
   }
 }
 
